--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,15 @@
         android:theme="@style/Theme.SuperCheap"
         tools:targetApi="31">
         <activity
-            android:name=".MySuperActivity"
+            android:name=".MySuper.MySuperActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MyAccountActivity"
+            android:name=".MyAccount.MyAccountActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
@@ -47,11 +42,6 @@
         <activity
             android:name=".DashboardActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
@@ -72,32 +62,37 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ManagerPage"
+            android:name=".Manager.ManagerPage"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".SignUpActivity"
+            android:name=".SignUp.SignUpActivity"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".GreetActivity"
+            android:name=".Greet.GreetActivity"
             android:exported="false"
             android:label="Greet"
-            android:parentActivityName=".SignUpActivity">
+            android:parentActivityName=".SignUp.SignUpActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".SigninActivity"
+            android:name=".SignIn.SigninActivity"
             android:exported="true"
             android:label="signin">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
