--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,8 +82,8 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".CreateCart"
-            android:exported="false">
+            android:name=".CreateCart.CreateCart"
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
