add dialog in log out ,create cart,delete item  and delete sale

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,13 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".DeleteSale.DeleteSale"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".AddComment.AddCommentActivity"
             android:exported="false">
             <meta-data
